# Karn-Protocol_Solana

./: .gitignore  Anchor.toml  CLAUDE.md  CONFIG.md  DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
app/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: connect-card.tsx  demo-shell.tsx  header.tsx  karn.module.css  profile-panel.tsx  proposals-panel.tsx  providers.tsx  treasury-panel.tsx
app/lib/: browser-wallet.ts  programs.ts
crates/karn-shared/: Cargo.toml
crates/karn-shared/src/: constants.rs  lib.rs  mana.rs  payload.rs  seeds.rs  vault.rs
docs/: IMPLEMENTATION_CHECKLIST.md  PDA_CONVENTIONS.md  PRD.md  README.md  TESTING.md
docs/decisions/: 0001-karn-shared-location.md  0002-error-code-offset-mapping.md  0003-genesis-instruction-split.md  0004-mint-instruction-split.md
docs/errors/: ambiguous-glob-reexport.md  karn-shared-idl-extraction.md
docs/modules/: M1.md  M10.md  M11.md  (+15 more)
migrations/: deploy.ts  run.ts
programs/treasury/: Cargo.toml
programs/treasury/src/: errors.rs  events.rs  lib.rs  state.rs
programs/treasury/src/instructions/: approve_scholarship.rs  deposit.rs  fund_lab.rs  initialize.rs  mod.rs  transfer.rs  update_governor.rs  withdraw_scholarship.rs
programs/valocracy/: Cargo.toml
programs/valocracy/src/: errors.rs  events.rs  helpers.rs  lib.rs  state.rs
programs/valocracy/src/instructions/: credit_activity.rs  get_votes.rs  get_votes_at.rs  guardian_mint.rs  initialize.rs  mint.rs  mint_community.rs  mod.rs  pause_credit.rs  remove_guardian.rs  resume_credit.rs  revoke.rs  revoke_credit_authority.rs  self_register.rs  set_credit_authority.rs  set_guardian_tracks.rs  set_valor.rs  set_verified.rs  update_governor.rs  update_primary.rs  update_treasury.rs
scripts/: demo.ts
sdk/: README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
(+60 files in other folders)
