[package]
name = "karn-shared"
version = "0.1.0"
description = "Karn Protocol — shared types, seeds, math, and constants"
edition = "2021"

[lib]
name = "karn_shared"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
