[package]
name = "valocracy"
version = "0.1.0"
description = "Karn Protocol — Valocracy program (identity, soulbound badges, Mana)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "valocracy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
karn-shared = { path = "../../crates/karn-shared" }
treasury = { path = "../treasury", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
